--- a/dreamFLyFlugschuhle/style/main.css
+++ b/dreamFLyFlugschuhle/style/main.css
@@ -1,15 +1,18 @@
-*
-{
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-html
-{
+html{
   height: 100%;
   background-image: url(../img/pexels-pixabay-45230.jpg);
+  /*Das cover Schlüsselwort behält das Seitenverhältnis des Hintergrundbildes bei und skaliert es so, 
+  dass es so klein wie möglich ist, aber den Hintergrund-Positionierungsbereichs vollständig abdeckt.*/
   background-size: cover;
   background-repeat: no-repeat;
+  /*Die CSS Eigenschaft background-attachmentlegt fest,
+  ob die Position eines Hintergrundbildes innerhalb des viewport fixiert ist,
+  oder ob es mit seinem enthaltenden Block scrollt.*/
   background-attachment: fixed;
 
   font-family: 'Dosis', sans-serif;
