--- a/photography/main.css
+++ b/photography/main.css
@@ -6,30 +6,124 @@
 
 html {
   font-size: 100%;
+  font-family: 'Jost', sans-serif;
 }
 
+/*Breakpoint*/
+
+/*1200px oder Schmaler*/
+@media(max-with: 75em) {}
+
+/*992px oder Schmaler*/
+@media(max-with: 62em) {}
+
+/*768px oder Schmaler*/
+@media(max-with: 48em) {}
+
+/*576px oder Schmaler*/
+@media(max-with: 36em) {}
+
 .container {
-  width: 75rem;
-  margin: 0 auto;
+  max-width: 75rem;
+  margin: 0px auto;
 }
 
 .header {
   height: 40rem;
-
-  background-image: linear-gradient(-5.71deg, rgba(255, 255, 255)49.9%, rgba(0, 0, 0, 0)50.1%),
-    url(./images/pexels-benjamin-suter-3617500.jpg);
-  background-repeat: no-repeat, no-repeat;
-  background-position: center 100%, center center;
-  background-size: 100vw 10vw, cover;
+  min-height: calc(15.5rem + 32vw);
+  position: relative;
+  overflow: hidden;
 }
 
-.nav__list-item {
+/*1200px oder Schmaler*/
+@media(max-with: 75em) {
+  .header {
+    height: calc(18rem + 32vw);
+  }
+}
+
+.slope {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 10vw;
+
+  background-image: linear-gradient(-5.71deg, white 49.9%, transparent 50.1%);
+  background-repeat: no-repeat;
+  background-position: center 100%;
+  background-size: 100vw 10vw;
+  z-index: 1;
+}
+
+.header__container {
+  position: relative;
+}
+
+.header::before {
+  content: "";
+  top: 0px;
+  width: 100vw;
+  bottom: -7rem;
+  position: absolute;
+
+  background-image: url("./images/pexels-benjamin-suter-3617500.jpg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% auto;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  height: 33vw;
+  width: 100vw;
+  bottom: -7rem;
+
+  background-image: url("./images/pexels-benjamin-suter-3617500-mountains.webp");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: 100% auto;
+}
+
+/*1200px oder Schmaler*/
+@media(max-with: 75em) {
+  .header::before {
+    bottom: -4rem;
+  }
+
+  .header::after {
+    bottom: -4rem;
+  }
+}
+
+.icon {
+  fill: currentColor;
+  height: 1em;
+  vertical-align: middle;
+  position: relative;
+  top: -0.075em;
+}
+
+.navigation__list-item {
   list-style-type: none;
   display: block;
   float: left;
 }
 
-.nav__list-item-link {
+/*768px oder Schmaler*/
+@media(max-with: 48em) {
+  .navigation__list-item--mobil-hidden {
+    display: none;
+  }
+}
+
+.navigation__list-item--menu {
+  float: right;
+  font-size: 3rem;
+}
+
+.navigation__list-item-link {
   color: white;
   text-decoration: none;
   padding: 0.5rem 0.25rem 0.25rem 0.25rem;
@@ -37,22 +131,62 @@ html {
   margin-left: 2rem;
   margin-right: 2rem;
   display: block;
+  text-shadow: 0 0 0.5rem black;
 }
 
-.nav__list-item-link:hover {
-  border-bottom: 0.2rem solid rgb(0, 226, 156);
+.navigation__list-item-link:hover {
+  border-bottom: 0.15rem solid rgb(0, 226, 156);
 }
 
-.nav__list-item-link--logo:hover {
+.navigation__list-item--menu .navigation__list-item-link {
+  margin-top: 0.4rem;
+}
+
+.navigation__list-item--menu .navigation__list-item-link:hover {
   border-bottom: none;
-  color: rgb(150, 150, 150);
+  color: rgb(200, 200, 200);
 }
 
-.nav__list-item-logo {
+.navigation__list-item-link--logo {
+  margin-top: 0.9rem;
+}
+
+.navigation__list-item-link--logo:hover {
+  border-bottom: none;
+  color: rgb(200, 200, 200);
+}
+
+.navigation__list-item-logo {
   width: 4rem;
   height: 4rem;
 }
 
-.nav__list-item-logo {
+.navigation__list-item-logo {
   fill: currentColor;
+}
+
+.header__heading-container {
+  clear: both;
+}
+
+.header__heading-main {
+  padding-top: 5rem;
+  line-height: 92%;
+  font-size: 7rem;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.header__heading-sub {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.25rem;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  text-shadow: 0 0 0.5rem black;
+  z-index: 1;
+  position: relative;
 }
