--- a/photography/main.css
+++ b/photography/main.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: "Jost";
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url("./fonts/jost/Jost-VariableFont_wght.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Jost";
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url("./fonts/jost/Jost-Italic-VariableFont_wght.woff2") format("woff2");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,19 +25,19 @@ html {
   font-family: 'Jost', sans-serif;
 }
 
-/*Breakpoint*/
+/** Breakpoints */
 
-/*1200px oder Schmaler*/
-@media(max-with: 75em) {}
+/** 1200px oder schmaler */
+@media (max-width: 75em) {}
 
-/*992px oder Schmaler*/
-@media(max-with: 62em) {}
+/** 992px oder schmaler */
+@media (max-width: 62em) {}
 
-/*768px oder Schmaler*/
-@media(max-with: 48em) {}
+/** 768px oder schmaler */
+@media (max-width: 48em) {}
 
-/*576px oder Schmaler*/
-@media(max-with: 36em) {}
+/** 576px oder schmaler */
+@media (max-width: 36em) {}
 
 .container {
   max-width: 75rem;
@@ -29,31 +45,31 @@ html {
 }
 
 .header {
-  height: 40rem;
-  min-height: calc(15.5rem + 32vw);
+  height: 35rem;
+  min-height: calc(13rem + 32vw);
   position: relative;
   overflow: hidden;
 }
 
-/*1200px oder Schmaler*/
-@media(max-with: 75em) {
+/** 1200px oder schmaler */
+@media (max-width: 75em) {
   .header {
     height: calc(18rem + 32vw);
   }
 }
 
-.slope {
+.header__slope {
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
   height: 10vw;
+  z-index: 1;
 
   background-image: linear-gradient(-5.71deg, white 49.9%, transparent 50.1%);
   background-repeat: no-repeat;
   background-position: center 100%;
   background-size: 100vw 10vw;
-  z-index: 1;
 }
 
 .header__container {
@@ -62,10 +78,10 @@ html {
 
 .header::before {
   content: "";
-  top: 0px;
-  width: 100vw;
-  bottom: -7rem;
   position: absolute;
+  width: 100vw;
+  top: 0;
+  bottom: -9rem;
 
   background-image: url("./images/pexels-benjamin-suter-3617500.jpg");
   background-repeat: no-repeat;
@@ -76,9 +92,12 @@ html {
 .header::after {
   content: "";
   position: absolute;
-  height: 33vw;
+  bottom: -9rem;
+
+  /* 2000 pixel breit <=> 100vw */
+  /* ~660 pixel hoch <=> 33vw */
   width: 100vw;
-  bottom: -7rem;
+  height: 33vw;
 
   background-image: url("./images/pexels-benjamin-suter-3617500-mountains.webp");
   background-repeat: no-repeat;
@@ -86,14 +105,34 @@ html {
   background-size: 100% auto;
 }
 
-/*1200px oder Schmaler*/
-@media(max-with: 75em) {
+/** 1200px oder schmaler */
+@media (max-width: 75em) {
   .header::before {
     bottom: -4rem;
   }
 
   .header::after {
     bottom: -4rem;
+  }
+}
+
+@media (max-width: 62em) {
+  .header::before {
+    bottom: -1rem;
+  }
+
+  .header::after {
+    bottom: -1rem;
+  }
+}
+
+@media (max-width: 36em) {
+  .header::before {
+    background-size: cover;
+  }
+
+  .header::after {
+    display: none;
   }
 }
 
@@ -111,9 +150,8 @@ html {
   float: left;
 }
 
-/*768px oder Schmaler*/
-@media(max-with: 48em) {
-  .navigation__list-item--mobil-hidden {
+@media (max-width: 62em) {
+  .navigation__list-item--mobile-hidden {
     display: none;
   }
 }
@@ -170,6 +208,7 @@ html {
 }
 
 .header__heading-main {
+  font-weight: 700;
   padding-top: 5rem;
   line-height: 92%;
   font-size: 7rem;
@@ -177,6 +216,37 @@ html {
   color: white;
   text-transform: uppercase;
   text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+
+  animation-name: header__heading-main-font-weight;
+  animation-delay: 0.75s;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: both;
+
+}
+
+@keyframes header__heading-main-font-weight {
+  0% {
+    opacity: 0;
+    font-weight: 100;
+  }
+
+  100% {
+    opacity: 1;
+    font-weight: 700;
+  }
+}
+
+@media (max-width: 62em) {
+  .header__heading-main {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 48em) {
+  .header__heading-main {
+    font-size: 3rem;
+  }
 }
 
 .header__heading-sub {
@@ -189,4 +259,10 @@ html {
   text-shadow: 0 0 0.5rem black;
   z-index: 1;
   position: relative;
+}
+
+@media (max-width: 48em) {
+  .header__heading-sub {
+    font-size: 1rem;
+  }
 }
